<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/info"
        android:icon="@drawable/ic_info"
        android:title="@string/menu_info"
        app:showAsAction="ifRoom" />

</menu>